--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -69,6 +69,13 @@
           </div>
         }
       </div>
+      <div *ngIf="errors.length > 0" class="alert alert-danger">
+        <ul>
+          <li *ngFor="let err of errors">
+            {{ err }}
+          </li>
+        </ul>
+      </div>
       <div class="text-center">
         <button class="btn btn-primary mr-1">Register</button>
         <button class="btn btn-secondary" type="reset" (click)="onReset()">
